Upon deletion of the profile don't fallback on current if it supervised.

BUG=686035

R=anthonyvd@chromium.org, bauerb@chromium.org

Review-Url: https://codereview.chromium.org/2659803003
Cr-Commit-Position: refs/heads/master@{#447235}

Former-commit-id: c5cdb47188549b4d5c9ce8905dc8d1edd797cd07